frontend: report creation.

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -18,6 +18,8 @@ html {
   --text: #333333;
   --primary-dark: #320b4e;
   --secondary-dark: #0061cc;
+  --white: #ffffff;
+  --error: #FF312E;
 }
 
 a {
